# TheCar2

./: CMakeLists.txt  CNN.cpp  CNN.hpp  Config.cpp  Config.hpp  Detect.cpp  Detect.hpp  README.md  Readme.md  RoadSign.hpp  StopSignDetect.cpp  StopSignDetect.hpp  TheCarCV.cpp  TheCarCV.hpp  config.xml  main.cpp  speedtest.h
